tests/errors/preasm_errors/mcr_saved_keywrd/saved_keywrd.as
; defining an mcr with the name of a saved keyword
mcr jmp
cmp #0, #1
endmcr